--- a/home.html
+++ b/home.html
@@ -21,8 +21,9 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
-							<h1>Innovation Practicum Admin</h1>
+							<span class="avatar"><img src="images/6-64939_john-cena-clipart-thank-you-wwe-john-cena.png
+" alt="" /></span>
+							<h1>TEAM_161</h1>
 							<p>Design Sprint - Rapid Prototyping</p>
 						</header>
 						<!--
