--- a/home.html
+++ b/home.html
@@ -65,9 +65,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://twitter.com/FORGE_FORCE" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="https://www.instagram.com/forge_accelerator/" class="icon brands fa-instagram">Instagram</a></li>
-								<li><a href="https://www.facebook.com/FORGEAccelerator" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="https://twitter.com/varmanhopz" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="https://www.instagram.com/varmanhopz/" class="icon brands fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/verman.verman.35/" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
